# kadeck

./: .editorconfig  .npmrc  DEVELOPMENT.md  Makefile  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/actions/pre-setup-tauri/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci-js.yml  ci-rs.yml  semantic-pr-lint.yml
src/: App.css  App.tsx  vite-env.d.ts
src-plugins/: Cargo.toml
src-plugins/kadeck-obs/: Cargo.toml
src-plugins/kadeck-obs/src/: lib.rs
src-plugins/kadeck-obs/src/actions/: mod.rs
src-plugins/kadeck-plugin-skeleton/: Cargo.toml
src-plugins/kadeck-plugin-skeleton/src/: lib.rs
src-plugins/kadeck-plugin-test/: Cargo.toml
src-plugins/kadeck-plugin-test/src/: main.rs
src-tauri/: Cargo.toml  Makefile  rust-toolchain.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/actions/: mod.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/integrations/modules/: mod.rs
src-tauri/src/profiles/: actions.rs  mod.rs
src/components/: app-layout.tsx
src/components/app/: Sidebar.tsx  sidebar-draggable-item.tsx  stream-deck-key-item.tsx  stream-deck-knobs-item.tsx  stream-deck-screen-item.tsx
src/components/ui/: resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx
src/hooks/commands/: use-profile-manager.tsx  use-save-profile-settings.ts
src/pages/deck/: deck-devices.tsx  deck-droppable-key.tsx  deck-settings.tsx  deck.tsx
src/pages/welcome/: welcome-page.tsx
(+6 files in other folders)
