[package]
name = "kadeck_obs"
version = "0.1.0"
authors = ["danielhe4rt <danielhe4rt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
kadeck-plugin-skeleton = { path = "../kadeck-plugin-skeleton", version = "*" }
obws = "0.13.0"
tokio = { version = "1.41.1", features = ["full"] }

[lib]
name = "kadeck_obs"
crate-type = ["dylib"]
